# pathTracingCG

./: CMakeLists.txt  README.md  a.cpp
algelin/OrthographicCamera/: OrthoCam.cpp
algelin/Ray/: Ray.h
algelin/Triangle/: Triangle.cpp  Triangle.h
algelin/Vector/: Vec.cpp  Vec.h
files/: displacement64.ppm
scenes/: cornellroom.sdl
src/: Displacement.cpp  DisplacementMapping.cpp  DisplacementMapping.h  OrthoCam.h  PPM.cpp  PPM.h  PathTracing.cpp  PathTracing.h  Scene.cpp  Scene.h  Triangle.cpp  Triangle.h  a.out  cornell.pnm  cornell.ppm  main.cpp
